--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                    <i class="fab fa-github"></i>
                               </a>
                         <a href="https://p.paytm.me/xCTH/7yzmtgie" class="icon">
-                                   <i class="fa fa-payment" aria-hidden="true"></i>
+                                   <i class="fa fa-paytm" aria-hidden="true"></i>
                               </a>
                         <a href="https://telegram.dog/PR0FESS0R-99" class="icon">
                                    <i class="fab fa-telegram"></i>
