--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="content">
                 <div class="left">
                     <div class="about-container">
-                        <h3 class="title">ABOUT ME</h3>
+                        <h3 class="title">Telegram Bot</h3>
                         <p>
                         <article class="text">
                             <strong>
