--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                          </div>
                     </label>
                 <a href="https://telegram.dog/Midukki_Robot" class="mail">
-                         <i class="far fa-bot"></i>
+                         <i class="far 🤖"></i>
                     </a>
                 <div class="main">
                     <div class="image">
